[package]
name = "blog_os"
version = "0.1.0"
authors = ["gwy15 <gwy15thu@gmail.com>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 30   # seconds

[[test]]
name = "kernel_stack_overflow"
harness = false

[dependencies]
# build a bootable image
# bootloader = "0.9.4"
bootloader = { git = "https://github.com/Freax13/bootloader.git", branch = "fix-dupplicate-improper-ctype" }
# wrap vga memory address as volatile so that it won't be optimized
volatile = "0.2.6"
# for a static vga writer
lazy_static = { version= "1.4.0", "features" = ["spin_no_std"] }
spin = "0.5.2"
# for qemu exiting in testing
x86_64 = "0.11.1"
# for qemu stdout redirect
uart_16550 = "0.2.7"
# keyboard interrupts, etc.
pic8259_simple = "0.2.0"
# keyboard scancode to key conversion
pc-keyboard = "0.5.0"
